--- a/package.json
+++ b/package.json
@@ -23,5 +23,11 @@
   "bugs": {
     "url": "https://github.com/jcrben/2015-02-solo/issues"
   },
-  "homepage": "https://github.com/jcrben/2015-02-solo"
+  "homepage": "https://github.com/jcrben/2015-02-solo",
+  "dependencies": {
+    "bookshelf": "^0.7.9",
+    "express": "^4.12.2",
+    "knex": "^0.7.4",
+    "sqlite3": "^3.0.5"
+  }
 }
