--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/jcrben/2015-02-solo",
   "dependencies": {
+    "body-parser": "^1.12.0",
     "bookshelf": "^0.7.9",
     "express": "^4.12.2",
     "knex": "^0.7.4",
