--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "body-parser": "^1.12.0",
     "bookshelf": "^0.7.9",
+    "cors": "^2.6.0",
     "express": "^4.12.2",
     "knex": "^0.7.4",
     "sqlite3": "^3.0.5"
