--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "cors": "^2.6.0",
     "express": "^4.12.2",
     "knex": "^0.7.4",
+    "request-promise": "^0.4.2",
     "sqlite3": "^3.0.5"
   }
 }
