--- a/package.json
+++ b/package.json
@@ -30,7 +30,12 @@
     "cors": "^2.6.0",
     "express": "^4.12.2",
     "knex": "^0.7.4",
+    "request": "~2.57.0",
     "request-promise": "^0.4.2",
     "sqlite3": "^3.0.5"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.0",
+    "gulp-task-listing": "^1.0.1"
   }
 }
